syntax = "proto3";

option csharp_namespace = "CodeWave.Authentication.Protos";

service AuthServiceProto {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1; 
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 2;
    bool success = 3;
    string token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    bool success = 2;
    string message = 3;
}